--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@mdi/font": "7.0.96",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "libphonenumber-js": "^1.10.41",
+    "maz-ui": "^3.9.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "roboto-fontface": "*",
     "v-skeleton-loader": "^0.1.9",
     "vue": "^3.4.0",
+    "vue-cropperjs": "^5.0.0",
+    "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.3.2",
+    "vue3-otp-input": "^0.4.1",
     "vuetify": "^3.5.0",
     "vuex": "^4.1.0"
   },
