--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-cropperjs": "^5.0.0",
     "vue-multiselect": "^3.0.0-beta.2",
     "vue-router": "^4.3.2",
+    "vue3-carousel": "^0.3.4",
     "vue3-otp-input": "^0.4.1",
     "vuetify": "^3.5.0",
     "vuex": "^4.1.0"
