--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "maz-ui": "^3.9.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "number-to-words": "^1.2.4",
     "roboto-fontface": "*",
     "v-skeleton-loader": "^0.1.9",
     "vue": "^3.4.0",
