--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@mdi/font": "7.0.96",
+    "@splidejs/vue-splide": "^0.6.12",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
     "libphonenumber-js": "^1.10.41",
